// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project Overwrite suggestion change style when selected 1`] = `
<div
  className="root"
>
  <p
    aria-selected={true}
    className="text"
  >
    Overwrite
  </p>
</div>
`;

exports[`Project Overwrite suggestion render with overwrite suggestion 1`] = `
<div
  className="root"
>
  <p
    aria-selected={false}
    className="text"
  >
    Overwrite
  </p>
</div>
`;
